force-app/main/default/objects/AvaliacaoTutor__c/AvaliacaoTutor__c.object-meta.xml
<CustomObject>
    <label>Avaliação de Aproveitamento do Treinador</label>
    <nameField>
        <displayFormat>AVT-{00000000}</displayFormat>
        <label>Código da Avaliação Tutor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações de Aproveitamento</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>