force-app/main/default/objects/AvaliacaoTutor__c/fields/CodigoTreinador__c.field-meta.xml
<CustomField>
    <fullName>CodigoTreinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código do Treinador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Treinador/Tutor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações de Aproveitamento</relationshipLabel>
    <relationshipName>Avaliacoes</relationshipName>
    <type>Lookup</type>
</CustomField>