force-app/main/default/objects/AvaliacaoTutor__c/fields/DataPrimeiraVisita__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiraVisita__c</fullName>
    <label>Data da primeira visita</label>
    <type>Date</type>
</CustomField>