force-app/main/default/objects/AvaliacaoTutor__c/fields/DataSegundaVisita__c.field-meta.xml
<CustomField>
    <fullName>DataSegundaVisita__c</fullName>
    <label>Data da segunda visita</label>
    <type>Date</type>
</CustomField>