force-app/main/default/objects/AvaliacaoTutor__c/fields/IndiceAproveitamento__c.field-meta.xml
<CustomField>
    <fullName>IndiceAproveitamento__c</fullName>
    <formula>(( PontuacaoTotal__c * 100) / ( TotalRespostas__c * 3)) / 100</formula>
    <label>Indice de Aproveitamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>