force-app/main/default/objects/AvaliacaoTutor__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>MONTH( MesReferencia__c )</formula>
    <label>Mês</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>