force-app/main/default/objects/AvaliacaoTutor__c/fields/MesReferencia__c.field-meta.xml
<CustomField>
    <fullName>MesReferencia__c</fullName>
    <label>Mês referência</label>
    <type>Date</type>
</CustomField>