force-app/main/default/objects/AvaliacaoTutor__c/fields/PontuacaoTotal__c.field-meta.xml
<CustomField>
    <fullName>PontuacaoTotal__c</fullName>
    <label>Pontuação Total</label>
    <summarizedField>RespostasAvaliacaoTutor__c.ValorResposta__c</summarizedField>
    <summaryForeignKey>RespostasAvaliacaoTutor__c.AvaliacaoTutor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>