force-app/main/default/objects/AvaliacaoTutor__c/fields/TotalRespostas__c.field-meta.xml
<CustomField>
    <fullName>TotalRespostas__c</fullName>
    <label>Total Respostas</label>
    <summaryFilterItems>
        <field>RespostasAvaliacaoTutor__c.Indicador__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </summaryFilterItems>
    <summaryForeignKey>RespostasAvaliacaoTutor__c.AvaliacaoTutor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>